Solved construct a tree from preOrder data